<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity"
    android:background="@color/brown_1"
    android:padding="20dp">

    <include layout="@layout/button_back"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/menu_profile"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginVertical="6dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/background_profile_item"
                android:orientation="vertical"
                android:paddingHorizontal="6dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/pic_anggota_1"
                    android:contentDescription="@string/user_image_description_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_1"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_number_1"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email_1"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/background_profile_item"
                android:orientation="vertical"
                android:paddingHorizontal="6dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/pic_anggota_2"
                    android:contentDescription="@string/user_image_description_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_2"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_number_2"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email_2"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/background_profile_item"
                android:orientation="vertical"
                android:paddingHorizontal="6dp"
                android:paddingVertical="12dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/pic_anggota_3"
                    android:contentDescription="@string/user_image_description_3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_3"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_number_3"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email_3"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="6dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/background_profile_item"
                android:orientation="vertical"
                android:paddingHorizontal="6dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/pic_anggota_4"
                    android:contentDescription="@string/user_image_description_4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_4"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_number_4"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email_4"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_marginHorizontal="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/background_profile_item"
                android:orientation="vertical"
                android:paddingHorizontal="6dp"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/pic_anggota_5"
                    android:contentDescription="@string/user_image_description_5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_5"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_number_5"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email_5"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>