<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/brown_2"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="12dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/logo_description" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="20dp"
                android:fontFamily="cursive"
                android:textColor="@color/brown_0"
                android:text="@string/app_name"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="6dp"
                android:fontFamily="casual"
                android:textColor="@color/brown_0"
                android:text="@string/title_desc"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_marginVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input_login"
                android:hint="@string/hint_user"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:digits="abcdefghijklmopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:textColorHint="@color/brown_0"
                android:drawableTint="@color/brown_0"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="8dp"
                android:paddingVertical="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:boxBackgroundMode="none"
            android:layout_marginVertical="12dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/brown_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_input_login"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:imeOptions="actionGo"
                android:drawableTint="@color/brown_0"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:paddingVertical="14dp"
                android:textColorHint="@color/brown_0" />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/login_checkbox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="10dp"
            android:buttonTint="@color/brown_0"
            android:textColor="@color/brown_0"
            android:text="@string/login_remember"/>
        <TextView
            android:id="@+id/login_textview_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:textColor="@color/brown_0"
            android:textSize="16sp"
            android:textAlignment="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="14dp"
            app:icon="@drawable/ic_right_arrow"
            app:iconTint="@color/brown_0"
            app:iconGravity="textEnd"
            android:text="@string/login_button"
            android:textColor="@color/brown_0"
            android:background="@drawable/background_button_login"
            app:backgroundTint="@null"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>